<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            tools:context=".fragments.InfoFragment">

            <androidx.constraintlayout.widget.Group
                android:id="@+id/topContentGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:constraint_referenced_ids="appbar,
                imageMovie, imageBudget, budget,imageRevenue, recyclerViewGenres, revenue,
                imageRuntime, runtime, imageDate, date, imageCountry, country, textViewActors, recyclerActors"
                tools:visibility="visible" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:indicatorColor="@color/purple_700"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="invisible" />


            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    app:layout_scrollFlags="noScroll"
                    app:titleEnabled="false">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/arrowBack"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/standard_margin_plus"
                            android:src="@drawable/ic_baseline_arrow_back_24"
                            app:layout_constraintBottom_toBottomOf="@+id/movieTitle"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/movieTitle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/standard_margin_plus"
                            android:fontFamily="@font/raleway_regular"
                            android:paddingStart="@dimen/_15sdp"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingEnd="@dimen/_15sdp"
                            android:paddingBottom="@dimen/_10sdp"
                            android:textSize="@dimen/_30ssp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/arrowBack"
                            app:layout_constraintTop_toTopOf="parent" />


                        <ImageView
                            android:id="@+id/star"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:src="@drawable/ic_baseline_star_24"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/movieTitle" />

                        <TextView
                            android:id="@+id/textRating"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:fontFamily="@font/raleway_regular"
                            android:padding="@dimen/_10sdp"
                            android:textSize="@dimen/_16ssp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@+id/star"
                            app:layout_constraintStart_toEndOf="@+id/star"
                            app:layout_constraintTop_toTopOf="@+id/star" />

                        <ImageView
                            android:id="@+id/people"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:contentDescription="@string/credits"
                            android:src="@drawable/ic_baseline_people_24"
                            app:layout_constraintStart_toEndOf="@+id/textRating"
                            app:layout_constraintTop_toBottomOf="@id/movieTitle" />

                        <TextView
                            android:id="@+id/textPeople"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"
                            android:fontFamily="@font/raleway_regular"
                            android:padding="@dimen/_10sdp"
                            android:textSize="@dimen/_16ssp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@+id/people"
                            app:layout_constraintStart_toEndOf="@+id/people"
                            app:layout_constraintTop_toTopOf="@+id/people" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageMovie"
                android:layout_width="168dp"
                android:layout_height="240dp"
                android:layout_margin="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appbar"
                app:riv_corner_radius="8dp" />


            <ImageView
                android:id="@+id/imageBudget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/budget"
                android:src="@drawable/ic_budget"
                app:layout_constraintStart_toStartOf="@id/imageMovie"
                app:layout_constraintTop_toBottomOf="@+id/imageCountry" />

            <TextView
                android:id="@+id/budget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_regular"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="@+id/imageBudget"
                app:layout_constraintEnd_toEndOf="@+id/country"
                app:layout_constraintStart_toStartOf="@+id/country"
                app:layout_constraintTop_toTopOf="@+id/imageBudget" />

            <ImageView
                android:id="@+id/imageRevenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/revenue"
                android:src="@drawable/ic_revenue"
                app:layout_constraintStart_toStartOf="@id/imageMovie"
                app:layout_constraintTop_toBottomOf="@+id/imageBudget" />

            <TextView
                android:id="@+id/revenue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_regular"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="@+id/imageRevenue"
                app:layout_constraintEnd_toEndOf="@+id/budget"
                app:layout_constraintStart_toStartOf="@+id/budget"
                app:layout_constraintTop_toTopOf="@+id/imageRevenue" />

            <TextView
                android:id="@+id/textOverview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_regular"
                android:textSize="@dimen/_13ssp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="@+id/date"
                app:layout_constraintStart_toStartOf="@+id/imageCountry"
                app:layout_constraintTop_toBottomOf="@+id/revenue" />

            <ImageView
                android:id="@+id/imageRuntime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:contentDescription="@string/runtime"
                android:src="@drawable/ic_runtime"
                app:layout_constraintStart_toEndOf="@+id/imageMovie"
                app:layout_constraintTop_toBottomOf="@id/recyclerViewGenres" />

            <TextView
                android:id="@+id/runtime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/raleway_regular"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="@+id/imageRuntime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.517"
                app:layout_constraintStart_toEndOf="@+id/imageRuntime"
                app:layout_constraintTop_toTopOf="@+id/imageRuntime" />


            <ImageView
                android:id="@+id/imageDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:contentDescription="@string/releaseDate"
                android:src="@drawable/ic_date"
                app:layout_constraintStart_toEndOf="@+id/imageMovie"
                app:layout_constraintTop_toBottomOf="@+id/imageRuntime" />

            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_regular"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="@+id/imageDate"
                app:layout_constraintEnd_toEndOf="@+id/runtime"
                app:layout_constraintStart_toStartOf="@+id/runtime"
                app:layout_constraintTop_toTopOf="@+id/imageDate" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewGenres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageMovie"
                app:layout_constraintTop_toBottomOf="@+id/appbar" />


            <ImageView
                android:id="@+id/imageCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/country"
                android:src="@drawable/ic_country"
                app:layout_constraintStart_toStartOf="@id/imageMovie"
                app:layout_constraintTop_toBottomOf="@+id/imageMovie" />

            <TextView
                android:id="@+id/country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/raleway_regular"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="@+id/imageCountry"
                app:layout_constraintEnd_toEndOf="@+id/imageMovie"
                app:layout_constraintStart_toEndOf="@+id/imageCountry"
                app:layout_constraintTop_toTopOf="@+id/imageCountry" />


            <TextView
                android:id="@+id/textViewActors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_regular"
                android:layout_marginTop="15dp"
                android:padding="@dimen/_10sdp"
                android:text="@string/credits"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/textOverview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerActors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/date"
                app:layout_constraintStart_toStartOf="@+id/imageMovie"
                app:layout_constraintTop_toBottomOf="@+id/textViewActors" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>